// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Barbell Class Getting/Setting Attached Plates add_plate function should log a warning and assume weight type of kilograms if weight type does not exist 1`] = `
Array [
  Array [
    "weight_type 'fake weight type' does not exist for adding plate. assuming kilograms",
  ],
]
`;

exports[`Barbell Class Getting/Setting Attached Plates add_plate function should throw an error if number does not exist for kilogram plates 1`] = `"plate number '11' does not exist for 'kilograms'"`;

exports[`Barbell Class Getting/Setting Attached Plates add_plate function should throw an error if number does not exist for pound plates 1`] = `"plate number '11' does not exist for 'pounds'"`;

exports[`Barbell Class Getting/Setting Barbell Weight should log a warning and assume barbell weight type is kilograms if weight type does not exist 1`] = `
Array [
  Array [
    "weight_type 'fake weight type' does not exist for setting barbell weight. assuming kilograms",
  ],
  Array [
    "weight_type 'fake weight type' does not exist for setting barbell weight. assuming kilograms",
  ],
  Array [
    "weight_type 'fake weight type' does not exist for setting barbell weight. assuming kilograms",
  ],
]
`;

exports[`Barbell Class Getting/Setting Barbell Weight should log a warning and set assume weight type of kilograms if specified weight type doesn not exist 1`] = `
Array [
  Array [
    "weight_type 'fake weight type' does not exist for setting barbell weight. assuming kilograms",
  ],
]
`;

exports[`Barbell Class Getting/Setting Barbell Weight should throw an error if user tries to make the barbell weight negative by initalizing or setting 1`] = `"barbell weight can not be negative"`;

exports[`Barbell Class Getting/Setting Barbell Weight should throw an error if user tries to make the barbell weight negative by initalizing or setting 2`] = `"barbell weight can not be negative"`;

exports[`Barbell Class Getting/Setting Barbell Weight should throw an error if user tries to make the barbell weight negative by initalizing or setting 3`] = `"barbell weight can not be negative"`;
